--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CELEX - Juegos</title>
-  <background: url('super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg') no-repeat center center fixed;>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
-      background: url('fondo.jpg') no-repeat center center fixed;
+      background: url('super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg') no-repeat center center fixed;
       background-size: cover;
       overflow-x: hidden;
       color: white;
@@ -147,12 +146,19 @@
   <div id="userDropdown"></div>
 
   <div id="gameGrid" style="display: none;">
-    <div class="game">
-      <a href="games/slope/index.html" target="_blank">
-        <img src="games/slope/icon.png" alt="Slope">
-        <div class="game-title">Slope</div>
-      </a>
-    </div>  
+    <!-- todos tus juegos aquí -->
+   <div class="game">  
+    <a href="Slope-Source-code-main/index.html">  
+      <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope" />  
+      <div class="game-title">Slope</div>  
+    </a>  
+  </div>  
+  <div class="game">  
+    <a href="backrooms/index.html">  
+      <img src="backrooms/img/icon.png" alt="Backrooms" />  
+      <div class="game-title">Backrooms</div>  
+    </a>  
+  </div>  
   <div class="game">  
     <a href="BurritoBison-main/index.html">  
       <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison" />  
@@ -236,8 +242,8 @@
       <img src="volleyrandom/splash.png" alt="Volley Random" />  
       <div class="game-title">Volley Random</div>  
     </a>  
+  </div>   
   </div>  
-</div>  
 
   <script>
     const users = [
